# code-whisperer-lsp

./: Cargo.toml  readme.md  request_sceleton.json
src/: codefileutil.rs  codewshiperer.rs  main.rs
src/aiutils/: mod.rs
test_data/: basic_test.cwtest
