[package]
name = "code-wshisperer-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
codespan = "0.11.1"
codespan-lsp = "0.11.1"
reqwest = { version = "0.11.25", features = ["serde_json", "json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "full"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
